--- a/style.css
+++ b/style.css
@@ -42,4 +42,14 @@ h1 {
 #video {
     text-align: center;
     margin-top: 30px;
+    margin-bottom: 30px;
+}
+h2 {
+    
+    border-bottom: 5px solid;
+}
+.container-fluid {
+    text-align: center;
+    line-height: 0px;
+    width: 100vw;   
 }
